--- a/exp/tmp.ipynb
+++ b/exp/tmp.ipynb
@@ -213,6 +213,38 @@
     "plt.axis('off')\n",
     "plt.title('modified')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import drjit as dr\n",
+    "import mitsuba as mi\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "mi.set_variant('cuda_ad_rgb')\n",
+    "\n",
+    "scene = mi.load_file('scenes/cbox.xml', integrator='prb')\n",
+    "\n",
+    "params = mi.traverse(scene)\n",
+    "\n",
+    "key = 'green.reflectance.value'\n",
+    "\n",
+    "# Mark the green wall color parameter as differentiable\n",
+    "dr.enable_grad(params[key])\n",
+    "\n",
+    "# Propagate this change to the scene internal state\n",
+    "params.update()\n",
+    "\n",
+    "image = mi.render(scene, params, spp=128)\n",
+    "\n",
+    "dr.backward(image)\n",
+    "\n",
+    "# print(scene.integrator)"
+   ]
   }
  ],
  "metadata": {
