--- a/exp/tmp.ipynb
+++ b/exp/tmp.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.96987826 0.68394357 0.31919724]\n",
+      "[0.96987826 0.68394357 0.3191972 ]\n",
       "Bitmap[\n",
       "  pixel_format = rgb,\n",
       "  component_format = float32,\n",
@@ -216,9 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0, 0.0, 0.0]]\n",
+      "[[7573.04736328125, 4088.31494140625, 1715.1981201171875]]\n"
+     ]
+    }
+   ],
    "source": [
     "import drjit as dr\n",
     "import mitsuba as mi\n",
@@ -227,7 +236,7 @@
     "\n",
     "mi.set_variant('cuda_ad_rgb')\n",
     "\n",
-    "scene = mi.load_file('scenes/cbox.xml', integrator='prb')\n",
+    "scene = mi.load_file('scenes/cbox.xml', integrator='prb_npm')\n",
     "\n",
     "params = mi.traverse(scene)\n",
     "\n",
@@ -241,7 +250,11 @@
     "\n",
     "image = mi.render(scene, params, spp=128)\n",
     "\n",
+    "print(dr.grad(params[key]))\n",
+    "\n",
     "dr.backward(image)\n",
+    "\n",
+    "print(dr.grad(params[key]))\n",
     "\n",
     "# print(scene.integrator)"
    ]
