add submodule tcnn

--- a/exp/tmp.ipynb
+++ b/exp/tmp.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,15 @@
      "output_type": "stream",
      "text": [
       "[[0.0, 0.0, 0.0]]\n",
-      "[[7573.04736328125, 4088.31494140625, 1715.1981201171875]]\n"
+      "[[7573.05712890625, 4088.314453125, 1715.192138671875]]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。请查看单元格中的代码，以确定故障的可能原因。有关详细信息，请单击 <a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>。有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
      ]
     }
    ],
@@ -257,6 +265,34 @@
     "print(dr.grad(params[key]))\n",
     "\n",
     "# print(scene.integrator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import commentjson as json\n",
+    "import tinycudann as tcnn\n",
+    "import torch\n",
+    "\n",
+    "with open(\"data/config_hash.json\") as f:\n",
+    "\tconfig = json.load(f)\n",
+    "\n",
+    "n_input_dims = 2\n",
+    "n_output_dims = 1\n",
+    "\n",
+    "# Option 1: efficient Encoding+Network combo.\n",
+    "model = tcnn.NetworkWithInputEncoding(\n",
+    "\tn_input_dims, n_output_dims,\n",
+    "\tconfig[\"encoding\"], config[\"network\"]\n",
+    ")\n",
+    "\n",
+    "# Option 2: separate modules. Slower but more flexible.\n",
+    "encoding = tcnn.Encoding(n_input_dims, config[\"encoding\"])\n",
+    "network = tcnn.Network(encoding.n_output_dims, n_output_dims, config[\"network\"])\n",
+    "model = torch.nn.Sequential(encoding, network)"
    ]
   }
  ],
