--- a/exp/tmp.ipynb
+++ b/exp/tmp.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -224,15 +224,10 @@
      "output_type": "stream",
      "text": [
       "[[0.0, 0.0, 0.0]]\n",
-      "[[7573.05712890625, 4088.314453125, 1715.192138671875]]\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。请查看单元格中的代码，以确定故障的可能原因。有关详细信息，请单击 <a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>。有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
+      "backward: [[7572.9619140625, 4088.2705078125, 1715.158447265625]]\n",
+      "zero grad: [[0.0, 0.0, 0.0]]\n",
+      "<class 'drjit.cuda.ad.TensorXf'>\n",
+      "backward_to: [[7572.951171875, 4088.275634765625, 1715.1544189453125]]\n"
      ]
     }
    ],
@@ -243,6 +238,9 @@
     "import numpy as np\n",
     "\n",
     "mi.set_variant('cuda_ad_rgb')\n",
+    "\n",
+    "mi.set_log_level(mi.LogLevel.Debug)\n",
+    "dr.set_log_level(dr.LogLevel.Warn)\n",
     "\n",
     "scene = mi.load_file('scenes/cbox.xml', integrator='prb_npm')\n",
     "\n",
@@ -260,9 +258,16 @@
     "\n",
     "print(dr.grad(params[key]))\n",
     "\n",
-    "dr.backward(image)\n",
+    "dr.backward(image, dr.ADFlag.ClearVertices)\n",
+    "print(f'backward: {dr.grad(params[key])}')\n",
+    "dr.traverse(type(image), dr.ADMode.Backward)\n",
     "\n",
-    "print(dr.grad(params[key]))\n",
+    "dr.set_grad(params[key], dr.zeros(type(params[key])))\n",
+    "print(f'zero grad: {dr.grad(params[key])}')\n",
+    "\n",
+    "print(type(image))\n",
+    "dr.set_grad(image, dr.ones(type(image)))\n",
+    "print(f'backward_to: {dr.backward_to(params[key])}')\n",
     "\n",
     "# print(scene.integrator)"
    ]
@@ -277,7 +282,7 @@
     "import tinycudann as tcnn\n",
     "import torch\n",
     "\n",
-    "with open(\"data/config_hash.json\") as f:\n",
+    "with open(\"../ext/tiny-cuda-nn/data/config_hash.json\") as f:\n",
     "\tconfig = json.load(f)\n",
     "\n",
     "n_input_dims = 2\n",
