use trace.Trace to trace dr.backward

--- a/exp/tmp.ipynb
+++ b/exp/tmp.ipynb
@@ -216,26 +216,21 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 59,
-=======
-   "execution_count": 3,
->>>>>>> 030830df6ba69bb28ab8cf3103855f3de68f2c8d
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.0, 0.0, 0.0]]\n",
-<<<<<<< HEAD
-      "backward: [[7572.9619140625, 4088.2705078125, 1715.158447265625]]\n",
+      "image.shape = (256, 256, 3)\n",
+      "grad init state: [[0.0, 0.0, 0.0]]\n",
+      "backward: [[7572.9404296875, 4088.272705078125, 1715.1558837890625]]\n",
       "zero grad: [[0.0, 0.0, 0.0]]\n",
       "<class 'drjit.cuda.ad.TensorXf'>\n",
-      "backward_to: [[7572.951171875, 4088.275634765625, 1715.1544189453125]]\n"
-=======
-      "[[7573.05712890625, 4088.3095703125, 1715.1939697265625]]\n"
->>>>>>> 030830df6ba69bb28ab8cf3103855f3de68f2c8d
+      "backward_to: [[7572.96435546875, 4088.2724609375, 1715.1568603515625]]\n",
+      "<class 'mitsuba.cuda_ad_rgb.Color3f'>\n",
+      "(8, 3) [0.0, 0.0, 0.0, 0.0, 0.0, .. 14 skipped .., 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
@@ -244,6 +239,16 @@
     "import mitsuba as mi\n",
     "\n",
     "import numpy as np\n",
+    "\n",
+    "import sys\n",
+    "import trace\n",
+    "\n",
+    "tracer = trace.Trace(\n",
+    "    ignoredirs=[sys.prefix, sys.exec_prefix], \n",
+    "    trace=0, \n",
+    "    count=1, \n",
+    "    # countcallers=1, \n",
+    ")\n",
     "\n",
     "mi.set_variant('cuda_ad_rgb')\n",
     "\n",
@@ -264,9 +269,13 @@
     "\n",
     "image = mi.render(scene, params, spp=128)\n",
     "\n",
-    "print(dr.grad(params[key]))\n",
+    "print(f'image.shape = {image.shape}')\n",
     "\n",
-    "dr.backward(image, dr.ADFlag.ClearVertices)\n",
+    "print(f'grad init state: {dr.grad(params[key])}')\n",
+    "\n",
+    "tracer.run('dr.backward(image, dr.ADFlag.ClearVertices)')\n",
+    "r = tracer.results()\n",
+    "r.write_results(show_missing=True, coverdir='.')\n",
     "print(f'backward: {dr.grad(params[key])}')\n",
     "dr.traverse(type(image), dr.ADMode.Backward)\n",
     "\n",
@@ -277,12 +286,15 @@
     "dr.set_grad(image, dr.ones(type(image)))\n",
     "print(f'backward_to: {dr.backward_to(params[key])}')\n",
     "\n",
-    "# print(scene.integrator)"
+    "print(type(dr.grad(params[key])))\n",
+    "\n",
+    "grad = mi.TensorXf(0, (8, 3))\n",
+    "print(grad.shape, grad.array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
