--- a/exp/tmp.ipynb
+++ b/exp/tmp.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -225,10 +225,16 @@
      "text": [
       "image.shape = (256, 256, 3)\n",
       "grad init state: [[0.0, 0.0, 0.0]]\n",
-      "backward: [[7572.9404296875, 4088.272705078125, 1715.1558837890625]]\n",
+      "in generic.py enqueue_: type(a) = <class 'drjit.cuda.ad.TensorXf'>, type(a.array) = <class 'drjit.cuda.ad.Float'>\n",
+      "in router.py traverse(): dtype = <class 'drjit.cuda.ad.Float'>\n",
+      "in generic.py enqueue_: type(a) = <class 'drjit.cuda.ad.TensorXf'>, type(a.array) = <class 'drjit.cuda.ad.Float'>\n",
+      "in router.py traverse(): dtype = <class 'drjit.cuda.ad.Float'>\n",
+      "in router.py traverse(): dtype = <class 'drjit.cuda.ad.Float'>\n",
+      "in router.py traverse(): dtype = <class 'drjit.cuda.ad.Float'>\n",
+      "backward: [[7572.96484375, 4088.273681640625, 1715.15869140625]]\n",
+      "in router.py traverse(): dtype = <class 'drjit.cuda.ad.Float'>\n",
       "zero grad: [[0.0, 0.0, 0.0]]\n",
       "<class 'drjit.cuda.ad.TensorXf'>\n",
-      "backward_to: [[7572.96435546875, 4088.2724609375, 1715.1568603515625]]\n",
       "<class 'mitsuba.cuda_ad_rgb.Color3f'>\n",
       "(8, 3) [0.0, 0.0, 0.0, 0.0, 0.0, .. 14 skipped .., 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
@@ -245,7 +251,7 @@
     "\n",
     "tracer = trace.Trace(\n",
     "    ignoredirs=[sys.prefix, sys.exec_prefix], \n",
-    "    trace=0, \n",
+    "    trace=1, \n",
     "    count=1, \n",
     "    # countcallers=1, \n",
     ")\n",
@@ -274,8 +280,8 @@
     "print(f'grad init state: {dr.grad(params[key])}')\n",
     "\n",
     "tracer.run('dr.backward(image, dr.ADFlag.ClearVertices)')\n",
-    "r = tracer.results()\n",
-    "r.write_results(show_missing=True, coverdir='.')\n",
+    "# r = tracer.results()\n",
+    "# r.write_results(show_missing=True, coverdir='.')\n",
     "print(f'backward: {dr.grad(params[key])}')\n",
     "dr.traverse(type(image), dr.ADMode.Backward)\n",
     "\n",
@@ -284,7 +290,7 @@
     "\n",
     "print(type(image))\n",
     "dr.set_grad(image, dr.ones(type(image)))\n",
-    "print(f'backward_to: {dr.backward_to(params[key])}')\n",
+    "# print(f'backward_to: {dr.backward_to(params[key])}')\n",
     "\n",
     "print(type(dr.grad(params[key])))\n",
     "\n",
